# numericalRecipes

./: CMakeLists.txt
cpp/: CMakeLists.txt
cpp/Xcode/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt
cpp/Xcode/CMakeScripts/: ReRunCMake.make
cpp/Xcode/Debug/: libnumRec.dylib
cpp/Xcode/numRec.build/Debug/ALL_BUILD.build/: Script-0880ABFCAABBB06B398F241F.sh
cpp/Xcode/numRec.build/Debug/ZERO_CHECK.build/: Script-6CA44D7354B5F790D74E1970.sh
cpp/Xcode/numRec.build/Debug/install.build/: Script-93426DA6A4AC2C2AC9CE883C.sh
cpp/Xcode/numRec.build/Debug/numRec.build/: Script-C8D0EC84B8CA52C3382C43CD.sh
cpp/Xcode/numRec.build/Debug/numRec.build/Objects-normal/x86_64/: banded.d  cholesky.d  gaussj.d  nr.d  (+9 more)
cpp/Xcode/numRec.xcodeproj/: project.pbxproj
cpp/Xcode/numRec.xcodeproj/project.xcworkspace/xcuserdata/bernardocohen.xcuserdatad/: UserInterfaceState.xcuserstate
cpp/Xcode/numRec.xcodeproj/xcuserdata/bernardocohen.xcuserdatad/xcschemes/: xcschememanagement.plist
cpp/include/: numRec
cpp/include/numRec_bits/: banded.hpp  cholesky.hpp  gaussj.hpp  interp_1d.hpp  interp_linear.hpp  ludcmp.hpp  nr.hpp  nr3.h  qrdcmp.hpp  svd.hpp  toeplz.hpp  tridag.hpp  vander.hpp
cpp/src/: banded.cpp  cholesky.cpp  gaussj.cpp  interp_1d.cpp  interp_linear.cpp  ludcmp.cpp  nr.cpp  qrdcmp.cpp  svd.cpp  toeplz.cpp  tridag.cpp  vander.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/Xcode/: CMakeCache.txt  cmake_install.cmake
cpp/tests/Xcode/CMakeScripts/: ReRunCMake.make
cpp/tests/Xcode/test.build/Debug/ZERO_CHECK.build/: Script-C39CBC17DF8849EDD0933CA5.sh
cpp/tests/Xcode/test.xcodeproj/: project.pbxproj
cpp/tests/src/: test.cpp
(+7 files in other folders)
